[gd_scene load_steps=4 format=3 uid="uid://jgsmoqug3bvw"]

[ext_resource type="Script" path="res://Levels/hallway/Boss2.gd" id="1_kp67v"]
[ext_resource type="Texture2D" uid="uid://bgaflnlclnlks" path="res://icon.svg" id="2_15iur"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iptlb"]
size = Vector2(64, 64)

[node name="Boss2" type="CharacterBody2D"]
script = ExtResource("1_kp67v")

[node name="Hurtbox" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(34, 32)
shape = SubResource("RectangleShape2D_iptlb")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(34, 32)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_15iur")

[node name="ShootTimer" type="Timer" parent="."]

[node name="Rotater" type="Node2D" parent="."]
position = Vector2(33, 32)

[node name="Node2D" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Node2D"]
position = Vector2(90, 33)

[node name="Sprite2D" type="Sprite2D" parent="Node2D"]
position = Vector2(84, 33)
scale = Vector2(0.0859375, 0.0859375)
texture = ExtResource("2_15iur")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
